--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -30,10 +30,14 @@
 }
 
 .welcome {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
-  flex: 1;
   align-items: center;
   justify-content: center;
 }
