--- a/frontend/app/panel.module.css
+++ b/frontend/app/panel.module.css
@@ -23,6 +23,7 @@
   width: 100%;
   height: 100%;
   background: url('/images/panel.png');
+  background-position: 10%;
   opacity: 0.2;
   pointer-events: none;
 }
