--- a/frontend/app/graph.module.css
+++ b/frontend/app/graph.module.css
@@ -13,6 +13,9 @@
   transform: translate(-50%, -50%) scale(1.2);
 }
 .node > div {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
