--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -28,6 +28,7 @@
   flex: 1;
   flex-direction: column;
   overflow: hidden;
+  align-items: center;
 }
 
 .welcome {
@@ -50,4 +51,28 @@
 }
 .permadismiss input {
   margin-right: 5px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  width: 200px;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 20px 10px 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  backdrop-filter: blur(8px);
+}
+.overlay div {
+  font-size: 40px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+.red {
+  color: #f00;
+}
+.blue {
+  color: #00f;
 }
