--- a/frontend/app/graph.module.css
+++ b/frontend/app/graph.module.css
@@ -14,6 +14,7 @@
   transform: translate(-50%, -50%) scale(1.2);
 }
 .node > div {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   width: 50px;
   height: 50px;
   border-radius: 50%;
