--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -57,22 +57,27 @@
   position: absolute;
   top: 0;
   width: 200px;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: space-between;
-  padding: 5px 20px 10px 20px;
+  padding: 10px 20px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  border-bottom: 2px solid #3B2F2F;
   backdrop-filter: blur(8px);
 }
 .overlay div {
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 4px;
+  padding: 2px 4px;
   font-size: 40px;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
+  text-shadow: 0 0 4px #3B2F2F;
 }
 .red {
-  color: #f00;
+  color: #f11;
 }
 .blue {
-  color: #00f;
+  color: #22f;
 }
