--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -77,8 +77,8 @@
   padding: 2px 4px;
 }
 .red {
-  color: rgb(239, 133, 133);
+  color: #ef8585;
 }
 .blue {
-  color: rgb(132, 132, 233);
+  color: #8484e9;
 }
