--- a/frontend/app/graph.module.css
+++ b/frontend/app/graph.module.css
@@ -1,4 +1,7 @@
 .graph {
+  --node-size: 80px;
+}
+.graph {
   position: relative;
   flex: 1;
   width: 100%;
@@ -15,13 +18,20 @@
 }
 .node > div {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  width: 50px;
-  height: 50px;
+  width: var(--node-size);
+  height: var(--node-size);
   border-radius: 50%;
+  border-width: 4px;
+  border-style: solid;
   display: flex;
   justify-content: center;
   align-items: center;
   user-select: none;
+  overflow: hidden;
+}
+.node > div > img {
+  width: 100%;
+  height: 100%;
 }
 .edges {
   position: absolute;
