--- a/frontend/app/welcome.module.css
+++ b/frontend/app/welcome.module.css
@@ -16,9 +16,13 @@
 .choose {
   display: flex;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .choose button {
-  padding: 8px 16px;
+  padding: 10px 20px;
   cursor: pointer;
+  font-weight: bold;
+  font-size: large;
+  border: 2px solid #3B2F2F;
+  border-radius: 5px;
 }
