--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -36,6 +36,17 @@
   top: 0;
   width: 200px;
   background: rgba(0, 0, 0, 0.7);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-bottom: 2px solid #3B2F2F;
+  backdrop-filter: blur(8px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 20px;
+}
+.score {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,13 +54,8 @@
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   text-shadow: 0 0 4px #3B2F2F;
-  padding: 10px 20px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  border-bottom: 2px solid #3B2F2F;
-  backdrop-filter: blur(8px);
 }
-.overlay div {
+.score div {
   background: rgba(0, 0, 0, 0.7);
   border-radius: 4px;
   padding: 2px 4px;
