--- a/frontend/app/welcome.module.css
+++ b/frontend/app/welcome.module.css
@@ -13,6 +13,10 @@
   z-index: 2000;
 }
 
+.welcome img {
+  border-radius: 20px;
+}
+
 .choose {
   display: flex;
   gap: 20px;
@@ -23,6 +27,7 @@
   cursor: pointer;
   font-weight: bold;
   font-size: large;
-  border: 2px solid #3B2F2F;
+  border: 2px solid #5f5f5f;
   border-radius: 5px;
+  background-color: rgb(233, 215, 114);
 }
