--- a/frontend/app/round.module.css
+++ b/frontend/app/round.module.css
@@ -3,27 +3,15 @@
   right: 0;
   top: 0;
   width: 240px;
-  background-color: beige;
-  color: #333;
-  padding: 10px;
+  background-color: #333;
+  color: #8c8;
+  padding: 10px 20px;
   overflow: hidden;
-}
-
-.spinner {
-  display: inline-block;
-  border: 6px solid #e8e8e8;
-  border-top: 6px solid #68a;
-  border-radius: 50%;
-  width: 32px;
-  height: 32px;
-  animation: spin 1s linear infinite;
-}
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .pairing {
+  color: #ddd;
   margin-top: 10px;
 }
 .pair {
