--- a/frontend/app/welcome.module.css
+++ b/frontend/app/welcome.module.css
@@ -29,5 +29,9 @@
   font-size: large;
   border: 2px solid #5f5f5f;
   border-radius: 5px;
-  background-color: rgb(233, 215, 114);
+  background-color: #e9d772;
+  transition: background-color 0.3s;
+}
+.choose button:hover {
+  background-color: #ffff2f;
 }
