--- a/frontend/app/panel.module.css
+++ b/frontend/app/panel.module.css
@@ -43,6 +43,7 @@
 }
 .panelStats p {
   font-weight: bold;
+  line-height: normal;
 }
 .panelStats ul {
   font-size: 14px;
@@ -76,7 +77,7 @@
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #333;
   text-decoration: underline;
   line-height: normal;
