--- a/frontend/app/round.module.css
+++ b/frontend/app/round.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 260px;
+  width: 280px;
   background-color: #333;
   color: #8c8;
   padding: 10px 20px;
@@ -13,9 +13,15 @@
   max-height: 100vh;
 }
 
+.round h2 {
+  font-size: 20px;
+}
+
 .pairing {
   color: #ddd;
-  margin-top: 10px;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #666;
 }
 .pair {
   display: flex;
@@ -35,4 +41,7 @@
   align-items: center;
   width: 50%;
   font-size: 12px;
+}
+.pairing > div {
+  white-space: pre-wrap;
 }
