--- a/frontend/app/round.module.css
+++ b/frontend/app/round.module.css
@@ -11,10 +11,17 @@
   font-family: 'Courier New', Courier, monospace;
   border-bottom-left-radius: 10px;
   max-height: 100vh;
+  background: linear-gradient(0deg, #333 0%, #222 100%);
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
 }
 
 .round h2 {
   font-size: 20px;
+}
+.round sub {
+  margin-bottom: 20px;
 }
 
 .pairing {
