--- a/frontend/app/panel.module.css
+++ b/frontend/app/panel.module.css
@@ -20,6 +20,8 @@
   gap: 10px;
   width: 440px;
   height: 100vh;
+  background: url('/images/notebook.png') no-repeat center/cover;
+  padding: 20px 0;
 }
 .panelBio {
   width: 240px;
@@ -89,8 +91,7 @@
   flex-direction: column;
   gap: 10px;
   overflow-y: auto;
-  padding: 20px 30px 10px 10px;
-  background: url('/images/notebook.png') no-repeat center/cover;
+  padding: 10px;
   border-radius: 8px;
 }
 .chatArea > div {
