--- a/frontend/app/round.module.css
+++ b/frontend/app/round.module.css
@@ -34,6 +34,7 @@
   display: flex;
   gap: 10px;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
   /* overflow: hidden; */
 }
@@ -46,6 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   width: 50%;
   font-size: 12px;
 }
