--- a/frontend/app/panel.module.css
+++ b/frontend/app/panel.module.css
@@ -21,7 +21,7 @@
   width: 440px;
   height: 100vh;
   background: url('/images/notebook.png') no-repeat center/cover;
-  padding: 20px 0;
+  padding: 0 30px 0 0;
 }
 .panelBio {
   width: 240px;
@@ -100,6 +100,7 @@
   padding: 20px 10px;
   color: #333;
   font-family: "Playwrite DE Grund", cursive;
+  font-size: 12px;
   white-space: pre-wrap;
 }
 .assistant {
